--- a/src/assets/styles/Login.css
+++ b/src/assets/styles/Login.css
@@ -1,10 +1,12 @@
 .login-container {
-    display: grid;
-    grid-template-columns: 4fr 2fr;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100vw;
     height: 100vh;
     scrollbar-width: 0px;
     margin: 0;
+    box-sizing: border-box;
 }
 
 ::-webkit-scrollbar {
@@ -12,13 +14,28 @@
 }
 
 .splash-container {
-    background-color: rgba(0, 68, 255, 0.7);
+    background-color: rgba(0, 57, 212, 0.9);
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     overflow: hidden;
+    color: white;
+    box-sizing: border-box;
+    font-size: 4rem;
+    font-weight: 700;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.splash-container img {
+    opacity: 0.1;
+    
+    height: 100%;
+    width: 100%;
+    z-index: -10;
 }
 
 .logo-slogan {
@@ -45,11 +62,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    padding: 10%;
+    width: 35%;
+    height: 100vh;
+    padding: 3%;
     box-sizing: border-box;
     gap: 3%;
     z-index: 100;
+    border-radius: 10px;
 }
 
 .login-title {
@@ -99,7 +118,7 @@
     gap: 20px;
 }
 
-.textboxes {
+.login-form .textboxes {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -107,17 +126,19 @@
     gap: 10px;
 }
 
-.textboxes input, .login-form input[type="submit"] {
+.login-form .textboxes input, .login-form input[type="submit"] {
     width: 100%;
     padding: 15px;
     box-sizing: border-box;
-    border-radius: 4px;
     font-size: 1rem;
-    border-style: none;
-    background-color: rgb(231, 231, 231);
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 4px;
+    background-color: rgb(241, 241, 241);
     color: black;
     font-weight: 600;
     font-family: "Inter";
+    
 }
 
 .login-form input[type="submit"] {
