--- a/src/assets/styles/Register.css
+++ b/src/assets/styles/Register.css
@@ -117,6 +117,7 @@
     align-items: center;
     background-color: rgb(240,240,240);
     background-size: cover;
+    color: grey;
 }
 
 .profile label {
@@ -134,4 +135,11 @@
     align-items: center;
     width: 100%;
     height: 100%;
+}
+
+.email-label {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
 }
