added the dashboard page and added token storing feature

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -12,6 +12,13 @@
   -moz-osx-font-smoothing: grayscale;
   margin: 0;
 
+  --primary-color: rgb(35, 68, 255);
+  --lighter-primary-color: rgb(89, 114, 255);
+  --secondary-color: rgb(255, 150, 31);
+
+  --primary-font-color: rgb(82, 82, 82);
+  --sec-font-color: rgb(114, 114, 114);
+
   
 }
 
