--- a/src/assets/styles/Department.css
+++ b/src/assets/styles/Department.css
@@ -66,6 +66,7 @@
     background-color: white;
     border-radius: 10px;
     width: 100%;
+    min-height: 400px;
     border-radius: 10px;
     overflow: hidden;
     
@@ -324,4 +325,33 @@
     
     border-color: var(--primary-font-color);
     padding: 10px;
+}
+
+.pagination {
+    width: 100%;
+    padding: 20px;
+    font-size: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    box-sizing: border-box;
+}
+
+.pagination .pages {
+    padding: 10px;
+    width: 20px;
+    height: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+    border-radius: 5px;
+}
+
+.pagination .pages.active{
+    background-color: var(--lighter-primary-color);
+    
+    color: white;
 }
