--- a/src/assets/styles/dashboard.css
+++ b/src/assets/styles/dashboard.css
@@ -14,7 +14,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 10px;
-    color: var(--primary-color);
+    color: var(--primary-font-color);
     
 }
 
@@ -54,7 +54,7 @@
     justify-content: center;
     padding: 10px;
     border-radius: 10px;
-    color: var(--primary-color);
+    color: var(--primary-font-color);
     background-color: white;
 }
 
@@ -105,7 +105,7 @@
     align-items: center;
     gap: 10px;
     justify-content: flex-start;
-    color: var(--primary-color);
+    color: var(--primary-font-color);
     background-color: rgba(85, 130, 255, 0.2);
     transition: all 300ms;
 }
@@ -141,7 +141,7 @@
 }
 
 .logs-options button {
-    color: var(--primary-color);
+    color: var(--primary-font-color);
     background-color: rgba(85, 130, 255, 0.2);
     display: flex;
     flex-direction: row;
@@ -167,7 +167,7 @@
     padding: 10px;
     border-style: solid;
     border-width: 1px;
-    border-color: var(--primary-color);
+    border-color: var(--primary-font-color);
 }
 
 .activity .description {
@@ -175,7 +175,7 @@
     flex-direction: row;
     align-items: center;
     gap: 10px;
-    color: var(--primary-color);
+    color: var(--primary-font-color);
 }
 
 .activity .timestamp {
