--- a/src/assets/styles/Department.css
+++ b/src/assets/styles/Department.css
@@ -32,6 +32,18 @@
     gap: 15px;
 }
 
+.all-departments-container .add-container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+.all-departments-container .add-container button {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
 .all-departments .department {
     padding: 7px;
     box-sizing: border-box;
@@ -354,4 +366,14 @@
     background-color: var(--lighter-primary-color);
     
     color: white;
+}
+
+.empty-table {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    font-size: 2rem;
 }
