--- a/src/assets/styles/Department.css
+++ b/src/assets/styles/Department.css
@@ -358,8 +358,17 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 10px;
     border-radius: 5px;
+    border-style: solid;
+    border-width: 1px;
+    color: var(--primary-font-color);
+    transition: all 200ms;
+}
+
+.pagination .pages:hover {
+    background-color: var(--lighter-primary-color);
+    
+    color: white;
 }
 
 .pagination .pages.active{
