--- a/src/assets/styles/Department.css
+++ b/src/assets/styles/Department.css
@@ -10,6 +10,8 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    overflow-y: scroll;
+    scrollbar-width: 0px;
     
     background-color: white;
     z-index: 100;
@@ -52,10 +54,23 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
     gap: 10px;
     transition: all 300ms;
     border-radius: 10px;
+    position: relative;
+}
+
+.department .member-options {
+    position: absolute;
+    left: 50%;
+}
+
+.department .pair {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
 }
 
 .all-departments .department:hover {
@@ -91,6 +106,7 @@
     background-color: rgba(0, 83, 160, 0.5);
 }
 
+
 .department-overview .image-container .image {
     width: 100%;
     height: 100%;
@@ -99,6 +115,13 @@
     overflow: hidden;
     background-image: url("nc-splash-new.jpg");
     opacity: 0.3;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    padding: 10px;
+    z-index: 10;
+    color: white;
 }
 
 .department-overview .department-stats {
@@ -162,6 +185,35 @@
 
 .profile-title .dept-name {
     font-size: 3rem;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    align-items: center;
+    position: relative;
+    width: 80%;
+}
+
+
+.dept-name .material-symbols-outlined {
+    transition: all 700ms;
+    font-weight: 200;
+    color: var(--primary-font-color);
+    scale: 0.8;
+    border-radius: 50%;
+}
+
+.dept-name .material-symbols-outlined.settings:hover {
+    transform: rotate(180deg);
+}
+
+.dept-name .member-options {
+    font-size: 1rem;
+    color: var(--primary-font-color);
+    position: absolute;
+}
+
+.dept-name .member-options .option {
+    padding: 5px;
 }
 
 .profile-title .dept-head-container {
@@ -311,6 +363,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: all 200ms;
 }
 
 .table-container table {
@@ -385,4 +438,146 @@
     align-items: center;
     padding: 10px;
     font-size: 2rem;
+}
+
+.more-options {
+    position: relative;
+    text-align: right;
+    transition: all 200ms;
+    cursor: pointer;
+}
+
+.more-options .open {
+    transition: all 200ms;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.more-options .open:hover {
+    background-color: rgb(218, 218, 218);
+}
+
+.member-options {
+    position: absolute;
+    top: 0px;
+    right: 20px;
+    background-color: white;
+    padding: 10px;
+    border-radius: 10px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    z-index: 100;
+    width: 200px;
+    box-shadow: 0px 0px 10px rgb(211, 211, 211);
+}
+.member-options .option:nth-child(even){
+    background-color: rgb(249, 252, 255);
+}
+
+.member-options .option {
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px;
+    box-sizing: border-box;
+    gap: 10px;
+    transition: all 200ms;
+}
+
+.member-options .option:hover {
+    background-color: rgb(238, 238, 238);
+}
+
+.modal {
+    flex-direction: column;
+}
+
+.department-container .modal-title {
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+.department-container .modal-body {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.department-container .textboxes {
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.department-container .textboxes label {
+    font-weight: 500;
+    font-size: 1.2rem;
+}
+
+.department-container .textboxes input,
+.department-container .textboxes select,
+.department-container .submit-container input {
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    font-size: 1rem;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 4px;
+    background-color: rgb(255, 255, 255);
+    color: black;
+    font-weight: light;
+    font-family: "Inter";   
+}
+
+.icons-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    place-items: center;
+    padding: 10px;
+    border-width: 1px;
+    border-radius: 10px;
+    border-color: var(--primary-font-color);
+}
+
+.icons-container .material-symbols-outlined {
+    font-weight: 300;
+}
+
+.icons-container .icon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    width: 50px;
+    height: 50px;
+    transition: all 200ms;
+    cursor: pointer;
+}
+
+.icons-container .icon:hover {
+    background-color: rgb(245, 243, 255);
+}
+
+.icons-container input[type="radio"]:checked + .icon {
+    background-color: #007bff;
+    color: white;
+    border-color: #007bff;
+}
+
+.modal-footer .material-symbols-outlined.loading {
+    animation: loading 2s infinite;
+}
+
+@keyframes loading{
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(1080deg);
+    }
 }
