--- a/src/assets/styles/CategoryAndTask.css
+++ b/src/assets/styles/CategoryAndTask.css
@@ -468,3 +468,28 @@
     flex-direction: row;
     justify-content: space-between;
 }
+
+.category-title {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 20px;
+    
+}
+
+.category-title h2 {
+    transition: all 500ms;
+    border-style: solid;
+    border-width: 0px;
+    border-radius: 10px;
+}
+
+.category-title h2[contenteditable=true]{
+    border-style: solid;
+    padding: 10px;
+    border-width: 1px;
+}
+
+.category-title .material-symbols-outlined {
+    font-size: 2rem;
+}
