--- a/src/assets/styles/Department.css
+++ b/src/assets/styles/Department.css
@@ -79,8 +79,8 @@
 }
 
 .department-info-container {
-    display: grid;
-    grid-template-rows: 2fr 4fr;
+    display: flex;
+    flex-direction: column;
     padding: 2%;
     overflow: scroll;
     gap: 10px;
@@ -833,4 +833,37 @@
     box-sizing: border-box;
     text-align: center;
     border-radius: 10px;
+}
+
+.department-info-container .pages-container {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    background-color: white;
+    border-radius: 50px;
+    padding: 10px;
+    height: 70px;
+
+}
+
+.department-info-container .pages-container div {
+    padding: 10px 15px;
+    font-size: 1.2rem;
+    transition: all 500ms;
+}
+
+.department-info-container .pages-container .select {
+    border-radius: 50px;
+    background-color: var(--primary-color);
+    color: white;
+
+
+}
+
+.performance-reviews-container {
+    background-color: white;
+    padding: 2%;
+    box-sizing: border-box;
+    border-radius: 10px;
+    color: var(--primary-font-color);
 }
