--- a/src/assets/styles/Main.css
+++ b/src/assets/styles/Main.css
@@ -8,6 +8,7 @@
     width: 100vw;
     height: 100vh;
     margin-bottom: -10%;
+    position: relative;
 }
 
 .header-container {
@@ -18,7 +19,7 @@
     
     background-color: white;
     display: grid;
-    grid-template-columns: 0.5fr 10fr 0.5fr 0.5fr 0.07fr;
+    grid-template-columns: 1fr 1fr;
     padding: 10px;
     box-sizing: border-box;
     z-index: 10;
@@ -29,6 +30,22 @@
     gap: 10px;
 }
 
+.header-container .current-location, .header-container .current-info {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    height: 5vh;
+    align-items: center;
+    gap: 20px;
+}
+
+.header-container .current-info {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    
+}
+
 .header-container .menu-container, .header-container .notification-container {
     display: flex;
     flex-direction: column;
@@ -36,12 +53,11 @@
     justify-content: center;
     transition: all 300ms;
     border-radius: 10px;
-    width: 80%;
     height: 100%;
 }
 
 .header-container .notification-container span{
-    scale: 1.1;
+    scale: 1;
 }
 
 .header-container .menu-container:hover, .header-container .notification-container:hover {
@@ -53,33 +69,58 @@
   scale: 1.1;
 }
 
-.header-container .profile-container {
-    width: 100%;
+.header-container .profile-containers {
     background-color: rgb(18, 103, 179);
     border-style: solid;
-    margin-right: 5%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     overflow: hidden;
     align-items: center;
-    
     clip-path: circle();
+    height: 100%;
+    width: 70px;
+    cursor: pointer;
 }
 
-.header-container .profile-container .profile-image-container {
+.header-container .profile-containers:hover {
+    border-style: solid;
+}
+
+.header-container .profile-containers .profile-image-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
     height: 100%;
+    transition: all 200ms;
+
 }
 
-.header-container .profile-container img {
-    width: 70%;
+.header-container .profile-containers .profile-image-container:hover {
+    border-style: solid;
+    border-width: 5px;
+    scale: 1;
+}
+
+.header-container .profile-containers img {
+    
     aspect-ratio: 1 / 1;
-    scale: 1.5;
+}
+
+.account-informations {
+    display: flex;
+    flex-direction: column;
+    align-items: last baseline;
+    
+}
+
+.account-informations .current-department {
+    color: rgb(177, 177, 177);
+    font-weight: 400;
+    font-size: 0.8rem;
+    text-align: right;
+    width: 100%;
 }
 
 .sidebar-container {
@@ -130,4 +171,28 @@
     height: 100%;
     overflow: scroll;
     box-sizing: border-box;
+}
+
+.header-options {
+    position: absolute;
+    right: 1%;
+    top: 5%;
+    z-index: 1000;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0px 0px 15px rgb(216, 216, 216);
+}
+
+.header-options .header-option {
+    padding: 15px 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    transition: all 200ms;
+    cursor: pointer;
+} 
+
+.header-options .header-option:hover {
+    background-color: aliceblue;
 }
