--- a/src/assets/styles/Department.css
+++ b/src/assets/styles/Department.css
@@ -867,3 +867,71 @@
     border-radius: 10px;
     color: var(--primary-font-color);
 }
+
+#create-opcr {
+    
+    color: var(--primary-font-color);
+}
+
+#create-opcr .desc {
+    color: var(--primary-font-color);
+    font-size: 1.3rem;
+}
+
+.select-ipcr-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    
+}
+
+.select-ipcr {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    color: var(--primary-font-color);
+    padding: 10px;
+    border-radius: 10px;
+    transition: all 200ms;
+    background-color: #f2f8ff;
+}
+
+.select-ipcr:has(input[type="radio"]:checked) {
+    border-style: solid;
+    border-color: #007bff;
+    border-width:1px;
+    color: #007bff;
+}
+
+.select-ipcr label {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.select-ipcr label div .status {
+    padding: 5px 10px;
+    background-color: #007bff;
+    color: white;
+    border-radius: 40px;
+    font-size: 0.8rem;
+}
+
+.select-ipcr label div .is-main {
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 40px;
+    font-size: 0.8rem;
+    color: #007bff;
+    padding: 5px 10px;
+}
+
+.select-ipcr label div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap:10px;
+}
